Preload fonts and lazy-load images

--- a/source/blank.html
+++ b/source/blank.html
@@ -10,6 +10,15 @@
     <link rel="apple-touch-icon" href="img/favicons/180.png">
     <link rel="manifest" href="favicons/manifest.webmanifest">
 
+    <link rel="preload" href="fonts/bloggersans.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-italic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-light.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-lightitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-medium.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-mediumitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bold.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bolditalic.woff2" as="font" crossorigin>
+
     <link rel="stylesheet" href="css/style.min.css">
   </head>
 
@@ -187,7 +196,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
             aria-label="Перейти на сайт HTML Academy">
             <span class="copyright__text">Разработано</span>
-            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" loading="lazy" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
