--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,15 @@
     <link rel="apple-touch-icon" href="img/favicons/180.png">
     <link rel="manifest" href="favicons/manifest.webmanifest">
 
+    <link rel="preload" href="fonts/bloggersans.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-italic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-light.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-lightitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-medium.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-mediumitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bold.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bolditalic.woff2" as="font" crossorigin>
+
     <link rel="stylesheet" href="css/style.min.css">
   </head>
 
@@ -993,7 +1002,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet-catalog.webp 1x, img/avatars/tanya-firsova_tablet-catalog@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet-catalog.jpg 1x, img/avatars/tanya-firsova_tablet-catalog@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/tanya-firsova_mobile-catalog.webp 1x, img/avatars/tanya-firsova_mobile-catalog@2x.webp 2x">
-                  <img class="traveler-card__avatar" src="img/avatars/tanya-firsova_mobile-catalog.jpg" srcset="img/avatars/tanya-firsova_mobile-catalog@2x.jpg 2x" width="70" height="70" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
+                  <img class="traveler-card__avatar" src="img/avatars/tanya-firsova_mobile-catalog.jpg" srcset="img/avatars/tanya-firsova_mobile-catalog@2x.jpg 2x" width="70" height="70" loading="lazy" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
                 </picture>
               </a>
               <h3 class="traveler-card__name">
@@ -1091,7 +1100,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet-catalog.webp 1x, img/avatars/petya-demin_tablet-catalog@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet-catalog.jpg 1x, img/avatars/petya-demin_tablet-catalog@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/petya-demin_mobile-catalog.webp 1x, img/avatars/petya-demin_mobile-catalog@2x.webp 2x">
-                  <img class="traveler-card__avatar" src="img/avatars/petya-demin_mobile-catalog.jpg" srcset="img/avatars/petya-demin_mobile-catalog@2x.jpg 2x" width="70" height="70" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
+                  <img class="traveler-card__avatar" src="img/avatars/petya-demin_mobile-catalog.jpg" srcset="img/avatars/petya-demin_mobile-catalog@2x.jpg 2x" width="70" height="70" loading="lazy" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
                 </picture>
               </a>
               <h3 class="traveler-card__name">
@@ -1186,7 +1195,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/mark-smolov_tablet.webp 1x, img/avatars/mark-smolov_tablet@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/mark-smolov_tablet.jpg 1x, img/avatars/mark-smolov_tablet@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/mark-smolov_mobile.webp 1x, img/avatars/mark-smolov_mobile@2x.webp 2x">
-                  <img class="traveler-card__avatar" src="img/avatars/mark-smolov_mobile.jpg" srcset="img/avatars/mark-smolov_mobile@2x.jpg 2x" width="70" height="70" alt="Аватар Марка Смолова: татуированный молодой человек в кепке сидит на крыше автомобиля">
+                  <img class="traveler-card__avatar" src="img/avatars/mark-smolov_mobile.jpg" srcset="img/avatars/mark-smolov_mobile@2x.jpg 2x" width="70" height="70" loading="lazy" alt="Аватар Марка Смолова: татуированный молодой человек в кепке сидит на крыше автомобиля">
                 </picture>
               </a>
               <h3 class="traveler-card__name">
@@ -1284,7 +1293,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/larisa-rogovaya_tablet.webp 1x, img/avatars/larisa-rogovaya_tablet@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/larisa-rogovaya_tablet.jpg 1x, img/avatars/larisa-rogovaya_tablet@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/larisa-rogovaya_mobile.webp 1x, img/avatars/larisa-rogovaya_mobile@2x.webp 2x">
-                  <img class="traveler-card__avatar" src="img/avatars/larisa-rogovaya_mobile.jpg" srcset="img/avatars/larisa-rogovaya_mobile@2x.jpg 2x" width="70" height="70" alt="Аватар Ларисы Роговой: улыбающаяся девушка в синем деловом костюме">
+                  <img class="traveler-card__avatar" src="img/avatars/larisa-rogovaya_mobile.jpg" srcset="img/avatars/larisa-rogovaya_mobile@2x.jpg 2x" width="70" height="70" loading="lazy" alt="Аватар Ларисы Роговой: улыбающаяся девушка в синем деловом костюме">
                 </picture>
               </a>
               <h3 class="traveler-card__name traveler-card__name--online">
@@ -1446,7 +1455,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
             aria-label="Перейти на сайт HTML Academy">
             <span class="copyright__text">Разработано</span>
-            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" loading="lazy" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
