--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,15 @@
     <link rel="apple-touch-icon" href="img/favicons/180.png">
     <link rel="manifest" href="favicons/manifest.webmanifest">
 
+    <link rel="preload" href="fonts/bloggersans.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-italic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-light.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-lightitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-medium.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-mediumitalic.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bold.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/bloggersans-bolditalic.woff2" as="font" crossorigin>
+
     <link rel="stylesheet" href="css/style.min.css">
   </head>
 
@@ -166,7 +175,7 @@
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/country-photos/thailand-tablet.webp 1x, img/country-photos/thailand-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/country-photos/thailand-tablet.jpg 1x, img/country-photos/thailand-tablet@2x.jpg 2x">
                 <source type="image/webp" srcset="img/country-photos/thailand-mobile.webp 1x, img/country-photos/thailand-mobile@2x.webp 2x">
-                <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" srcset="img/country-photos/thailand-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
+                <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" srcset="img/country-photos/thailand-mobile@2x.jpg 2x" width="270" height="110" loading="lazy" alt="Фотография зеленого тропического острова в насыщенно синей воде">
               </picture>
               <div class="country-card__container">
                 <h3 class="country-card__name country-card__name--thailand">Таиланд</h3>
@@ -185,7 +194,7 @@
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/country-photos/france-tablet.webp 1x, img/country-photos/france-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/country-photos/france-tablet.jpg 1x, img/country-photos/france-tablet@2x.jpg 2x">
                 <source type="image/webp" srcset="img/country-photos/france-mobile.webp 1x, img/country-photos/france-mobile@2x.webp 2x">
-                <img class="country-card__image" src="img/country-photos/france-mobile.jpg" srcset="img/country-photos/france-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
+                <img class="country-card__image" src="img/country-photos/france-mobile.jpg" srcset="img/country-photos/france-mobile@2x.jpg 2x" width="270" height="110" loading="lazy" alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
               </picture>
               <div class="country-card__container">
                 <h3 class="country-card__name country-card__name--france">Франция</h3>
@@ -204,7 +213,7 @@
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/country-photos/czech-tablet.webp 1x, img/country-photos/czech-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/country-photos/czech-tablet.jpg 1x, img/country-photos/czech-tablet@2x.jpg 2x">
                 <source type="image/webp" srcset="img/country-photos/czech-mobile.webp 1x, img/country-photos/czech-mobile@2x.webp 2x">
-                <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" srcset="img/country-photos/czech-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
+                <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" srcset="img/country-photos/czech-mobile@2x.jpg 2x" width="270" height="110" loading="lazy" alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
               </picture>
               <div class="country-card__container">
                 <h3 class="country-card__name country-card__name--czech">Чехия</h3>
@@ -239,7 +248,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet.webp 1x, img/avatars/tanya-firsova_tablet@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet.jpg 1x, img/avatars/tanya-firsova_tablet@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/tanya-firsova_mobile.webp 1x, img/avatars/tanya-firsova_mobile@2x.webp 2x">
-                  <img class="companion-card__avatar" src="img/avatars/tanya-firsova_mobile.jpg" srcset="img/avatars/tanya-firsova_mobile@2x.jpg 2x" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
+                  <img class="companion-card__avatar" src="img/avatars/tanya-firsova_mobile.jpg" srcset="img/avatars/tanya-firsova_mobile@2x.jpg 2x" width="270" height="270" loading="lazy" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
                 </picture>
               </div>
 
@@ -255,7 +264,7 @@
                     <div class="flags-list__flag-container">
                       <picture>
                         <source type="image/webp" srcset="img/flags/Sri-Lanka.webp 1x, img/flags/Sri-Lanka@2x.webp 2x">
-                        <img class="flags-list__flag" src="img/flags/Sri-Lanka.png" srcset="img/flags/Sri-Lanka@2x.png 2x" width="35" height="25" alt="Флаг Шри-Ланки">
+                        <img class="flags-list__flag" src="img/flags/Sri-Lanka.png" srcset="img/flags/Sri-Lanka@2x.png 2x" width="35" height="25" loading="lazy" alt="Флаг Шри-Ланки">
                       </picture>
                     </div>
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
@@ -266,7 +275,7 @@
                     <div class="flags-list__flag-container">
                       <picture>
                         <source type="image/webp" srcset="img/flags/Thailand.webp 1x, img/flags/Thailand@2x.webp 2x">
-                        <img class="flags-list__flag" src="img/flags/Thailand.png" srcset="img/flags/Thailand@2x.png 2x" width="35" height="25" alt="Флаг Таиланда">
+                        <img class="flags-list__flag" src="img/flags/Thailand.png" srcset="img/flags/Thailand@2x.png 2x" width="35" height="25" loading="lazy" alt="Флаг Таиланда">
                       </picture>
                     </div>
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
@@ -277,7 +286,7 @@
                     <div class="flags-list__flag-container">
                       <picture>
                         <source type="image/webp" srcset="img/flags/Seychelles.webp 1x, img/flags/Seychelles@2x.webp 2x">
-                        <img class="flags-list__flag" src="img/flags/Seychelles.png" srcset="img/flags/Seychelles@2x.png 2x" width="35" height="25" alt="Флаг Сейшелл">
+                        <img class="flags-list__flag" src="img/flags/Seychelles.png" srcset="img/flags/Seychelles@2x.png 2x" width="35" height="25" loading="lazy" alt="Флаг Сейшелл">
                       </picture>
                     </div>
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
@@ -340,7 +349,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet.webp 1x, img/avatars/petya-demin_tablet@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet.jpg 1x, img/avatars/petya-demin_tablet@2x.jpg 2x">
                   <source type="image/webp" srcset="img/avatars/petya-demin_mobile.webp 1x, img/avatars/petya-demin_mobile@2x.webp 2x">
-                  <img class="companion-card__avatar" src="img/avatars/petya-demin_mobile.jpg" srcset="img/avatars/petya-demin_mobile@2x.jpg 2x" width="270" height="270" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
+                  <img class="companion-card__avatar" src="img/avatars/petya-demin_mobile.jpg" srcset="img/avatars/petya-demin_mobile@2x.jpg 2x" width="270" height="270" loading="lazy" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
                 </picture>
               </div>
 
@@ -356,7 +365,7 @@
                     <div class="flags-list__flag-container">
                       <picture>
                         <source type="image/webp" srcset="img/flags/Belgium.webp 1x, img/flags/Belgium@2x.webp 2x">
-                        <img class="flags-list__flag" src="img/flags/Belgium.png" srcset="img/flags/Belgium@2x.png 2x" width="35" height="25" alt="Флаг Бельгии">
+                        <img class="flags-list__flag" src="img/flags/Belgium.png" srcset="img/flags/Belgium@2x.png 2x" width="35" height="25" loading="lazy" alt="Флаг Бельгии">
                       </picture>
                     </div>
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
@@ -367,7 +376,7 @@
                     <div class="flags-list__flag-container">
                       <picture>
                         <source type="image/webp" srcset="img/flags/Czechia.webp 1x, img/flags/Czechia@2x.webp 2x">
-                        <img class="flags-list__flag" src="img/flags/Czechia.png" srcset="img/flags/Czechia@2x.png 2x" width="35" height="25" alt="Флаг Чехии">
+                        <img class="flags-list__flag" src="img/flags/Czechia.png" srcset="img/flags/Czechia@2x.png 2x" width="35" height="25" loading="lazy" alt="Флаг Чехии">
                       </picture>
                     </div>
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
@@ -507,7 +516,7 @@
         </div>
 
         <div class="address__map-container">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CCUUyBHoXC" width="1440" height="584" allowfullscreen title="Офис компании «Погнали» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/-/CCUUyBHoXC" width="1440" height="584" allowfullscreen loading="lazy" title="Офис компании «Погнали» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
         </div>
       </section>
     </main>
@@ -552,7 +561,7 @@
         <p class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" aria-label="Перейти на сайт HTML Academy">
             <span class="copyright__text">Разработано</span>
-            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+            <img class="copyright__logo" src="img/logo/htmlacademy.svg" width="27" height="34" loading="lazy" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
