Add aria-label to country-filter button

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -145,7 +145,7 @@
         <div class="filter-country__tabs-container">
           <div class="filter-country__wrapper wrapper">
             <h2 class="page-main__title page-main__title--uppercase page-main__title--no-margin filter-country__title">Фильтрация по странам:</h2>
-            <button class="filter-country__button button button--blue button--fading button--dots" type="button">
+            <button class="filter-country__button button button--blue button--fading button--dots" type="button" aria-label="Свернуть или развернуть фильтр по странам">
               <span class="filter-country__button-text filter-country__button-text--show-all button__text">Показать все</span>
               <span class="filter-country__button-text filter-country__button-text--collapse button__text">Свернуть</span>
             </button>
