Add map fallback for no JS situations

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1178,7 +1178,7 @@
                     <span class="level-badge__number">80</span>
                     <span class="traveler-card__badge-label level-badge__label">level</span>
                   </p>
-                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="130">
+                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="130">
                     <use href="img/icons/icons-sprite.svg#icon-level"></use>
                   </svg>
                 </div>
@@ -1276,7 +1276,7 @@
                     <span class="level-badge__number">25</span>
                     <span class="traveler-card__badge-label level-badge__label">level</span>
                   </p>
-                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="225">
+                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="225">
                     <use href="img/icons/icons-sprite.svg#icon-level"></use>
                   </svg>
                 </div>
@@ -1371,7 +1371,7 @@
                     <span class="level-badge__number">50</span>
                     <span class="traveler-card__badge-label level-badge__label">level</span>
                   </p>
-                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="180">
+                  <svg class="traveler-card__level-bar level-badge__level-bar level-bar level-bar--traveler-card" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="180">
                     <use href="img/icons/icons-sprite.svg#icon-level"></use>
                   </svg>
                 </div>
