--- a/source/index.html
+++ b/source/index.html
@@ -516,6 +516,14 @@
         </div>
 
         <div class="address__map-container">
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="img/map/map-desktop.webp 1x, img/map/map-desktop@2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="img/map/map-desktop.png 1x, img/map/map-desktop@2x.png 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/map/map-tablet.webp 1x, img/map/map-tablet@2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/map/map-tablet.png 1x, img/map/map-tablet@2x.png 2x">
+            <source type="image/webp" srcset="img/map/map-mobile.webp 1x, img/map/map-mobile@2x.webp 2x">
+            <img class="address__map-image address__map-image--no-js" src="img/map/map-mobile.png" srcset="img/map/map-mobile@2x.png 2x" width="320" height="424" alt="Офис компании «Погнали» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8">
+          </picture>
           <iframe src="https://yandex.ru/map-widget/v1/-/CCUUyBHoXC" width="1440" height="584" allowfullscreen loading="lazy" title="Офис компании «Погнали» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
         </div>
       </section>
